# slack-notifier

./: .gitignore  LICENSE  README.md  pyproject.toml
slack_notifier/: __init__.py  slack_notifier.py
